Create idcounts.dat if needed